--- a/jindingHTML/apple.html
+++ b/jindingHTML/apple.html
@@ -214,9 +214,9 @@
 //    rem.or = prevRem.or;
 //    rem.titleCenter();
 
-//    var or = sessionStorage.getItem('or');
-//    rem.or = or;
-//    rem.titleCenter();
+    var or = sessionStorage.getItem('or');
+    rem.or = or;
+    rem.titleCenter();
 
     //将列表页面上的数据移动到本页面
     $(function () {
