--- a/jindingHTML/commodity.html
+++ b/jindingHTML/commodity.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="x5-orientation" content="portrait">
-    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1.0, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>福利清单</title>
 
     <!-- Set render engine for 360 browser -->
@@ -697,11 +696,6 @@
             rem.or = 'false';//false代表横屏
             sessionStorage.setItem('or','false');
             rem.titleCenter();
-
-//            window.orientation = 0;
-//            $("body").attr("class", "landscape");
-//            window.orientation = 'landscape';
-            return false;
         }
     });
 </script>
