--- a/jindingHTML/commodity_v1.html
+++ b/jindingHTML/commodity_v1.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <meta name="x5-orientation" content="portrait">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>商品列表</title>
 
@@ -330,12 +329,7 @@
             sessionStorage.setItem('price', price);
             sessionStorage.setItem('KC', KC);
             var t = $(this).data('fruitType');
-            if(t === 0){
-                location.href = 'apple.html'
-            }else if(t === 1){
-                location.href = 'girlFruit.html'
-            }
-//            location.href = 'commodityDetail.html'
+            location.href = 'commodityDetail.html'
         }
     })
     //标题文字居中
