--- a/html/my.html
+++ b/html/my.html
@@ -127,7 +127,7 @@
 <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default" style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
-            <a href="commodityb.html" class="">
+            <a href="commodity.html" class="">
                 <img src="../assets/images/bottomNav/首页.png" alt="">
                 <span class="am-navbar-label  sl-icon-color-6D6D6D">首页</span>
             </a>
