--- a/html/addAddress.html
+++ b/html/addAddress.html
@@ -62,7 +62,7 @@
 </head>
 <body style="background-color: #EEEEF3">
 <div class="top-div sl-width-percent100 sl-position-fixed sl-top-0rem sl-left-0rem sl-z-Index-10001">
-    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem sl-padding-left-08rem" >
+    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem" >
         <img src="../assets/images/back.png" class="sl-width-1dot5rem sl-height-1dot5rem"  onclick="goBack()">
         <div class="title sl-font-color-white">新增收货地址</div>
     </div>
