--- a/html/addressList.html
+++ b/html/addressList.html
@@ -11,6 +11,7 @@
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
 
+
     <!-- No Baidu Siteapp-->
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
 
@@ -48,7 +49,7 @@
 </head>
 <body style="background-color: #EEEEF3">
 <div class="top-div sl-width-percent100 sl-position-fixed sl-top-0rem sl-left-0rem sl-z-Index-10001">
-    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem sl-padding-left-08rem" >
+    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem" >
         <img src="../assets/images/back.png" class="sl-width-1dot5rem sl-height-1dot5rem"  onclick="goBack()">
         <div class="title sl-font-color-white">地址列表</div>
     </div>
