--- a/html/boughtList.html
+++ b/html/boughtList.html
@@ -56,7 +56,7 @@
 </head>
 <body >
 <div class="top-div sl-width-percent100 sl-position-fixed sl-top-0rem sl-left-0rem sl-z-Index-10001">
-    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem sl-padding-left-08rem" >
+    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem" >
         <img src="../assets/images/back.png" class="sl-width-1dot5rem sl-height-1dot5rem"  onclick="goBack()">
         <div class="title sl-font-color-white">我的订单</div>
     </div>
