--- a/html/commodityDetail.html
+++ b/html/commodityDetail.html
@@ -225,7 +225,7 @@
 <!--灰色层-->
 <div id="grayTier"></div>
 
-<div id="bottomNav" style="width: 100%;" class="sl-flex-row-center-space-between sl-navbar">
+<div id="bottomNav" style="width: 100%;" class="sl-flex-row-center-space-between">
     <div style="width: 70%;background-color: white;height:3rem;color: black;" class="sl-flex-row-center-flex-start">
         <span style="font-size: 0.8rem;color: black;margin-top: 0.2rem;margin-left: .8rem;">花费的积分&nbsp;&nbsp;:</span><b style="color: red;margin-left: .8rem;">0</b>
     </div>
