--- a/html/my.html
+++ b/html/my.html
@@ -124,12 +124,24 @@
     </li>
 </ul>
 
-<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default" style="border-top: 2px solid #E5E5E5;">
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default sl-navbar" style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
-            <a href="commodity.html" class="">
+            <a href="home.html" class="">
                 <img src="../assets/images/bottomNav/首页.png" alt="">
                 <span class="am-navbar-label  sl-icon-color-6D6D6D">首页</span>
+            </a>
+        </li>
+        <li >
+            <a href="search-mui.html" class="">
+                <img src="../assets/images/bottomNav/搜索.png" alt="">
+                <span class="am-navbar-label sl-icon-color-6D6D6D">搜索</span>
+            </a>
+        </li>
+        <li >
+            <a href="shoppingCart.html" class="">
+                <img src="../assets/images/bottomNav/购物车.png" alt="">
+                <span class="am-navbar-label sl-icon-color-6D6D6D">购物车</span>
             </a>
         </li>
         <li >
@@ -162,6 +174,6 @@
         var index = $(this).data('index');
         sessionStorage.setItem('index',index);
         location.href = 'boughtList.html'
-    });
+    })
 </script>
 </html>
