--- a/html/boughtList.html
+++ b/html/boughtList.html
@@ -55,13 +55,12 @@
 
 </head>
 <body >
-<div class="top-div" style="width: 100%;position:fixed;top: 0px;left: 0px;z-index: 10001">
-    <div class="sl-flex-row-center-flex-start " style="background-color: red;height: 3rem;padding-left: 0.8rem;">
-        <img src="../assets/images/back.png" alt="" style="width: 1.5rem;height: 1.5rem;" onclick="goBack()">
-        <div style="color: white;" class="title">我的订单</div>
+<div class="top-div sl-width-percent100 sl-position-fixed sl-top-0rem sl-left-0rem sl-z-Index-10001">
+    <div class="sl-flex-row-center-flex-start sl-background-color-red sl-height-3rem" >
+        <img src="../assets/images/back.png" class="sl-width-1dot5rem sl-height-1dot5rem"  onclick="goBack()">
+        <div class="title sl-font-color-white">我的订单</div>
     </div>
 </div>
-<!--<div style="background-color: white;width: 100%;margin-top: 3rem;">-->
 
 </div>
 <div style="margin-top: 3rem;">
@@ -80,7 +79,7 @@
             <div data-tab-panel-0 class="am-tab-panel">
                 <ul class="am-list" style="color: black;margin-bottom: 0rem;">
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -93,7 +92,7 @@
                         </div>
                     </li>
                     <li>
-                        <div  class="sl-tab-panel">
+                        <div  class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -106,7 +105,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -123,7 +122,7 @@
             <div data-tab-panel-1 class="am-tab-panel" style="padding-right: 0rem;padding-left: 0rem;">
                 <ul class="am-list" style="color: black;margin-bottom: 0rem;">
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -136,7 +135,7 @@
                         </div>
                     </li>
                     <li>
-                        <div  class="sl-tab-panel">
+                        <div  class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -149,7 +148,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -166,7 +165,7 @@
             <div data-tab-panel-2 class="am-tab-panel " style="padding-right: 0rem;padding-left: 0rem;">
                 <ul class="am-list" style="color: black;margin-bottom: 0rem;">
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -179,7 +178,7 @@
                         </div>
                     </li>
                     <li>
-                        <div  class="sl-tab-panel">
+                        <div  class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -192,7 +191,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -205,7 +204,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -218,7 +217,7 @@
                         </div>
                     </li>
                     <li>
-                        <div  class="sl-tab-panel">
+                        <div  class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -231,7 +230,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -244,7 +243,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -257,7 +256,7 @@
                         </div>
                     </li>
                     <li>
-                        <div  class="sl-tab-panel">
+                        <div  class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -270,7 +269,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -283,7 +282,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -296,7 +295,7 @@
                         </div>
                     </li>
                     <li>
-                        <div  class="sl-tab-panel">
+                        <div  class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
@@ -309,7 +308,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="sl-tab-panel">
+                        <div class="sl-tab-panel sl-flex-column-flex-start-center">
                             <div>
                                 <span>兑换时间：</span><b>2017-05-11</b>
                             </div>
