--- a/html/search-mui.html
+++ b/html/search-mui.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Hello MUI</title>
+		<title>搜索</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -981,7 +981,7 @@
 			<!--</div>-->
 		</div>
 	</div>
-	<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default sl-navbar" style="border-top: 2px solid #E5E5E5;">
+	<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default sl-navbar" style="border-top: 1px solid #E5E5E5;">
 			<ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
 				<li >
 					<a href="home.html" class="">
@@ -990,7 +990,7 @@
 					</a>
 				</li>
 				<li >
-					<a href="search-mui.html" class="">
+					<a href="#" class="">
 						<img src="../assets/images/bottomNavClick/搜索.png" alt="">
 						<span class="am-navbar-label  sl-color-red">搜索</span>
 					</a>
@@ -1002,7 +1002,7 @@
 					</a>
 				</li>
 				<li >
-					<a href="#" class="">
+					<a href="my.html" class="">
 						<img src="../assets/images/bottomNav/我的.png" alt="">
 						<span class="am-navbar-label sl-icon-color-6D6D6D" >我的</span>
 					</a>
