--- a/html/home.html
+++ b/html/home.html
@@ -198,7 +198,7 @@
    </div>
 </div>
 
-<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default sl-navbar" style="border-top: 2px solid #E5E5E5;">
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default sl-navbar" style="border-top: 1px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
             <a href="#" class="">
@@ -274,9 +274,9 @@
                     var tempNum1 =parseInt($.trim(e.data[1])) ;
 //                    console.log("f:"+tempNum+'.s:'+tempNum1);
                     if(isNaN(tempNum)){//先判断是不是数字
-                        rem.alertInfoByState('兑换失败',1)
+                        rem.alertInfoImgByState('兑换失败',1)
                     }else{
-                        rem.alertInfoByState('兑换成功',0)
+                        rem.alertInfoImgByState('兑换成功',0)
                     }
                 },
                 onCancel: function(e) {
@@ -294,17 +294,17 @@
         var n = parseInt($(self).val());
         if(isNaN(n) || n <= 0  ||flag){
             $(self).val('');
-            rem.alertInfoByState('请输入正整数',1)
+            rem.alertInfoImgByState('请输入正整数',1)
         }
         if(num > numKC){
             if( n > numKC ){
                 $(self).val('');
-                rem.alertInfoByState('库存不足',1)
+                rem.alertInfoImgByState('库存不足',1)
             }
         }else{
             if( n > num ){
                 $(self).val('');
-                rem.alertInfoByState('积分不足',1)
+                rem.alertInfoImgByState('积分不足',1)
             }
         }
 
